Enum prop
Adicionada uma propriedade Enum
